更新 - 完成 ContentHeader 上段

--- a/src/common/fonts/sass/variables.scss
+++ b/src/common/fonts/sass/variables.scss
@@ -1,4 +1,4 @@
-$icomoon-font-path: "../../fonts" !default;
+$icomoon-font-path: "~@/common/fonts" !default;  // 默认为字体文件所在文件夹
 
 $icon-add_circle: \e900;
 $icon-arrow_lift: \e901;
