更新 - 完成星星组件

--- a/src/common/style/App.scss
+++ b/src/common/style/App.scss
@@ -22,3 +22,15 @@ body, html {
   font-family: PingFang SC, Arial, Helvetica, sans-serif;
   font-weight: $font-weight-normal;
 }
+
+.clearfix {
+  display: inline-block;
+  &:after {
+    display: block;
+    content: '.';
+    height: 0;
+    line-height: 0;
+    clear: both;
+    visibility: hidden;
+  }
+}
