--- a/src/common/style/AppHeader.scss
+++ b/src/common/style/AppHeader.scss
@@ -1,9 +1,12 @@
 @import './utils.scss';
 
 .app-header {
+  position: relative;
   background: rgba($color-bgc, 0.5);
   color: $color-empty;
+  overflow: hidden;  // 消除滤镜露出阴影
   .content-wrapper {
+    position: relative;
     padding: 24px 12px 18px 24px;
     font-size: 0; // 消除容器元素中各个元素之间的空白，与子元素 font-size 配合使用
     .avatar {
@@ -71,6 +74,101 @@
           font-size: $micro/2;
         }
       }
+    }
+    .support-count {
+      position: absolute;
+      right: $small/2;
+      bottom: $mid/2;
+      border-radius: 16px;
+      height: $small;
+      padding: 0 8px;
+      line-height: $small;
+      background: rgba($color-full, 0.2);
+      font-weight: $font-weight-normal;
+      .count {
+        font-size: $micro/2;
+        margin-right: 2px;
+        vertical-align: top;
+      }
+      .icon-keyboard_arrow_right {
+        font-size: $micro/2;
+        line-height: $small;
+        vertical-align: top;
+      }
+    }
+  }
+  .bulletin-wrapper {
+    position: relative;
+    padding: 0 22px 0 12px;
+    height: $mid;
+    line-height: $mid;
+    background: rgba($color-bgc, 0.2);
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    .bulletin-icon {
+      display: inline-block;
+      vertical-align: top;
+      margin-top: 8px;
+      width: 22px;
+      height: 12px;
+      font-size: $micro/2;
+      @include bg-img('~@/assets/AppHeader/bulletin');
+      background-size: 22px 12px;
+    }
+    .bulletin-text {
+      font-size: $micro/2;
+      margin: 0 4px;
+      vertical-align: top;
+    }
+    .icon-keyboard_arrow_right {
+      position: absolute;
+      right: 12px;
+      top: 8px;
+      font-size: $micro/2;
+    }
+  }
+  .app-header-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -99;
+    filter: blur(10px)  // 模糊效果
+  }
+  .seller-detail {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; // hidden 当内容超过屏幕高度将不能滚动
+    background: rgba($color-bgc, 0.8);
+    .detail-wrapper {
+      min-height: 100%;
+      width: 100%;
+      .seller-detail-main {
+        margin-top: 64px;
+        padding-bottom: 64px; // 必须是 padding 给 footer 留出空间,css sticky footer 的关键
+        font-size: 0;
+        text-align: center;
+        .seller-name {
+          font-size: $big/2;
+          font-weight: bold;
+          color: rgba($color-empty, 1);
+          line-height: $big/2;
+        }
+      }
+    }
+    .close-detail {
+      position: relative;
+      height: 32px;
+      width: 32px;
+      margin: -64px auto 0 auto;
+      clear: both;
+      font-size: 32px;
     }
   }
 }
