--- a/src/common/style/utils/mixin.scss
+++ b/src/common/style/utils/mixin.scss
@@ -25,9 +25,9 @@
 };
 
 @mixin bg-img($url) {
-  background: url($url+'@2x.png') no-repeat;
+  background-image: url($url+'@2x.png');
   @media (-webkit-min-device-pixel-ratio: 3), (min-device-pixel-ratio: 3) {
-    background: url($url+'@3x.png') no-repeat;
+    background-image: url($url+'@3x.png');
   }
 };
 
