--- a/src/common/style/utils/mixin.scss
+++ b/src/common/style/utils/mixin.scss
@@ -1,12 +1,12 @@
-@mixin top-1px($color) {
+@mixin right-1px($color) {
   position: relative;
-  &:before {
+  &:after {
     display: block;
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 100%;
-    border-top: 1px solid $color;
+    height: 100%;
+    border-right: 1px solid $color;
     content: ''
   }
 };
@@ -19,10 +19,16 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    border-top: 1px solid $color;
+    border-bottom: 1px solid $color;
     content: ''
   }
 };
+
+@mixin border-none () {
+  &:after {
+    display: none;
+  }
+}
 
 @mixin bg-img($url) {
   background-image: url($url+'@2x.png');
