更新 - 评价页构建中

--- a/src/common/style/utils/variables.scss
+++ b/src/common/style/utils/variables.scss
@@ -8,5 +8,7 @@ $huge: 48px;
 $color-empty: rgb(255, 255, 255);
 $color-full: rgb(0, 0, 0);
 $color-bgc: rgb(7, 17, 27);
+$color-normal: rgb(77, 85, 93);
+$color-button: rgb(0, 160, 220);
 
 $font-weight-normal: 200;
